--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "spicytaste",
   "dependencies": {
+    "bcrypt": "^0.8.1",
     "body-parser": "^1.12.0",
     "express": "^4.12.2",
     "gulp": "^3.8.11",
