--- a/package.json
+++ b/package.json
@@ -1,26 +1,25 @@
 {
-  "name": "spicytaste",
-  "dependencies": {
-    "add-stream": "^1.0.0",
-    "angular-md5": "^0.1.7",
-    "bcrypt": "^0.8.5",
-    "body-parser": "^1.12.0",
-    "express": "^4.12.2",
-    "gulp": "^3.8.11",
-    "gulp-concat": "^2.5.2",
-    "gulp-ng-annotate": "^1.1.0",
-    "gulp-ng-config": "^1.2.1",
-    "gulp-nodemon": "^2.0.4",
-    "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": "^1.5.0",
-    "gulp-stylus": "^2.0.1",
-    "gulp-uglify": "^1.1.0",
-    "jsonwebtoken": "^5.0.5",
-    "mongoose": "^4.2.9",
-    "morgan": "^1.5.1",
-    "nib": "^1.1.0"
-  },
-  "devDependencies": {
-    "gulp-livereload": "^3.8.0"
-  }
+    "name": "spicytaste",
+    "dependencies": {
+        "angular-md5": "^0.1.7",
+        "bcrypt": "^0.8.5",
+        "body-parser": "^1.12.0",
+        "express": "^4.12.2",
+        "jsonwebtoken": "^5.0.5",
+        "mongoose": "^4.2.9",
+        "morgan": "^1.5.1"
+    },
+    "devDependencies": {
+        "gulp-livereload": "^3.8.0",
+        "gulp": "^3.8.11",
+        "gulp-concat": "^2.5.2",
+        "gulp-ng-annotate": "^1.1.0",
+        "gulp-ng-config": "^1.2.1",
+        "gulp-nodemon": "^2.0.4",
+        "gulp-rename": "^1.2.2",
+        "gulp-sourcemaps": "^1.5.0",
+        "gulp-stylus": "^2.0.1",
+        "gulp-uglify": "^1.1.0",
+        "nib": "^1.1.0"
+    }
 }
